--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -4527,5 +4527,7 @@
     "CL_DV_WM_minimum_rpm": "الحد الأدنى لعدد الدورات في الدقيقة",
     "CL_DV_WM_medium_rpm": "دورة في الدقيقة متوسطة",
     "CL_DV_WM_maximum_rpm": "الحد الأقصى لعدد الدورات في الدقيقة",
-    "CL_CF_CS_connect_to_wifi": "اتبع هذه الخطوات لتوصيل الجهاز بشبكة Wi-Fi. نوصي بتعطيل بيانات الشبكة على هاتفك الذكي."
+    "CL_CF_CS_connect_to_wifi": "اتبع هذه الخطوات لتوصيل الجهاز بشبكة Wi-Fi. نوصي بتعطيل بيانات الشبكة على هاتفك الذكي.",
+    "CL_DV_RF_family_care": "رعاية الأسرة",
+    "CL_DV_RF_family_care_tips": "في الفترات التالية، قد يكون هناك شخص نشط أمام الثلاجة."
 }
