--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -4527,5 +4527,7 @@
     "CL_DV_WM_minimum_rpm": "Минимални обороти",
     "CL_DV_WM_medium_rpm": "Средни обороти",
     "CL_DV_WM_maximum_rpm": "Максимални обороти",
-    "CL_CF_CS_connect_to_wifi": "Следвайте тези стъпки, за да свържете устройството към Wi-Fi. Препоръчваме да деактивирате мрежовите данни на вашия смартфон."
+    "CL_CF_CS_connect_to_wifi": "Следвайте тези стъпки, за да свържете устройството към Wi-Fi. Препоръчваме да деактивирате мрежовите данни на вашия смартфон.",
+    "CL_DV_RF_family_care": "Семейни грижи",
+    "CL_DV_RF_family_care_tips": "В следващите периоди някой може да е активен пред хладилника."
 }
