--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -4527,5 +4527,7 @@
     "CL_DV_WM_minimum_rpm": "Ελάχιστες στροφές ανά λεπτό",
     "CL_DV_WM_medium_rpm": "Μεσαίες στροφές",
     "CL_DV_WM_maximum_rpm": "Μέγιστες στροφές ανά λεπτό",
-    "CL_CF_CS_connect_to_wifi": "Ακολουθήστε αυτά τα βήματα για να συνδέσετε τη συσκευή στο Wi-Fi. Συνιστούμε να απενεργοποιήσετε τα δεδομένα δικτύου στο smartphone σας."
+    "CL_CF_CS_connect_to_wifi": "Ακολουθήστε αυτά τα βήματα για να συνδέσετε τη συσκευή στο Wi-Fi. Συνιστούμε να απενεργοποιήσετε τα δεδομένα δικτύου στο smartphone σας.",
+    "CL_DV_RF_family_care": "Οικογενειακή Φροντίδα",
+    "CL_DV_RF_family_care_tips": "Τις επόμενες περιόδους, κάποιος μπορεί να είναι ενεργός μπροστά στο ψυγείο."
 }
