--- a/language/i18n_es.json
+++ b/language/i18n_es.json
@@ -416,7 +416,7 @@
     "add_appliance_duplicate_binding": "El dispositivo ya está vinculado con XXX",
     "pind_stopped": "Detenido",
     "pind_ended": "Terminado",
-    "pind_cooking_timer": "Temporizador de preparación",
+    "pind_cooking_timer": "Temporizador de cocción",
     "firmware_update": "Actualización de firmware",
     "firmware_fail_end": "¡Actualización fallida",
     "firmware_fail_hint": "El proceso de actualización del firmware no se realizó correctamente. Inténtelo de nuevo más tarde. Si este error se repite varias veces, genere un ticket de servicio. No se preocupe, sus dispositivos seguirán funcionando como antes.",
@@ -844,8 +844,8 @@
     "hisense_rf_522_setup1": "Asegúrese de que el teléfono y el frigorífico están conectados a la misma red Wi-Fi.",
     "hisense_rf_522_setup2": "Asegúrese de que la pantalla grande del frigorífico muestra la página siguiente cuando está vinculando el teléfono.",
     "hisense_rf_628_setup1": "Ponga el aparato en operación normal. Toque el ícono Wi-Fi durante aproximadamente 3 segundos. Cuando aparece \"--\" en la pantalla, entra en el menú de conexión a la red.",
-    "hisense_rf_628_setup2": "Toque la tecla Fridge para seleccionar \"O\" en 60 segundos. Nota: \"O\" significa que el Wi-Fi está listo para conectarse, \"P\" significa emparejamiento multiusuario, \"88\" significa desvinculación, y \"--\" significa que la función no se selecciona normalmente.",
-    "hisense_rf_628_pair_setup2": "Toque la tecla Fridge para seleccionar \"P\" en 60 segundos. Nota: \"O\" significa que el Wi-Fi está listo para conectarse, \"P\" significa emparejamiento multiusuario, \"88\" significa desvinculación, y \"--\" significa que la función no se selecciona normalmente.",
+    "hisense_rf_628_setup2": "Toque la tecla Fridge/Frigorífico para seleccionar \"O\" en 60 segundos. Nota: \"O\" significa que el Wi-Fi está listo para conectarse, \"P\" significa emparejamiento multiusuario, \"88\" significa desvinculación, y \"--\" significa que la función no se selecciona normalmente.",
+    "hisense_rf_628_pair_setup2": "Toque la tecla Fridge/frigorífico para seleccionar \"P\" en 60 segundos. Nota: \"O\" significa que el Wi-Fi está listo para conectarse, \"P\" significa emparejamiento multiusuario, \"88\" significa desvinculación, y \"--\" significa que la función no se selecciona normalmente.",
     "hisense_rf_628_setup3": "Toque el ícono Wi-Fi para confirmar el modo de selección. El símbolo Wi-Fi comienza a parpadear y la red de este aparato está ahora encendida para conectarse durante 5 minutos.",
     "hisense_rf_628_pair_setup3": "Toque el ícono Wi-Fi para confirmar el modo de selección. La red EMPAREJAMIENTO de este aparato está ahora encendida para conectarse durante 5 minutos.",
     "hisense_rf_628_setup4": "Cuando el símbolo Wi-Fi está encendido, significa que la conexión Wi-Fi es correcta. La pantalla volverá a la normalidad.",
@@ -894,7 +894,7 @@
     "oven_atag_extras_steam_clean": "Limpieza a vapor",
     "oven_atag_extras_steam_clean_content": "Las manchas quedarán impregnadas para que puedan ser eliminadas fácilmente con un paño una vez finalizado el programa de Limpieza a Vapor.",
     "oven_atag_extras_regenerate": "REGENERAR",
-    "oven_atag_extras_regenerate_content": "Esta función se utiliza para regenerar platos precocinados.Mediante el uso de vapor,no hay pérdida de calidad.El sabor y la textura se conservan como cuando están recién preparados.Se pueden preparar diferentes platos simultáneamente.",
+    "oven_atag_extras_regenerate_content": "Esta función se utiliza para regenerar platos precocinados. Mediante el uso de vapor, no hay pérdida de calidad. El sabor y la textura se conservan como cuando están recién preparados. Se pueden preparar diferentes platos simultáneamente.",
     "oven_atag_extras_send_to_oven": "ENVIAR AL HORNO",
     "Hot_air_upper": "Aire caliente + Calentador superior",
     "Hot_air_infra": "Aire caliente + Calentador Infra",
@@ -1409,7 +1409,7 @@
     "CN": "Porcelana",
     "CO": "Colombia",
     "CG": "Congo",
-    "CK": "Islas Cook",
+    "CK": "Islas de Cocción",
     "CR": "Costa Rica",
     "CU": "Cuba",
     "CY": "Chipre",
@@ -1934,7 +1934,7 @@
     "wm22_pair_step1_desc": "Enciende la lavadora.\nToca y mantén presionadas las teclas \"delay end\" y \"extras\" durante 3 segundos.\n\"Con\" aparecerá en la pantalla.",
     "wm22_connect_step1_desc": "Enciende la lavadora.\nToca y mantén presionadas las teclas \"delay end\" y \"extras\" durante 3 segundos.\nAparecerá \"OFF\" en la pantalla.",
     "White": "Blanco",
-    "Bright": "Brillante",
+    "Bright": "Brillo",
     "Vivid": "Vívido",
     "Dark": "Oscuro",
     "Black": "Negro",
@@ -1948,7 +1948,7 @@
     "Chocolate": "Chocolate",
     "Kids": "Niños",
     "Grass": "Césped",
-    "Blueberries": "Arandanos",
+    "Blueberries": "Arándanos",
     "add_clothes_tip_title": "¡Agregue ropa!",
     "add_clothes_tip_desc": "El aparato pausará su programa. Puede tomar unos minutos agregar ropa. Reanude el programa en su lavadora",
     "extra_water_plus": "Agua+",
@@ -3854,16 +3854,16 @@
     "cl_app_ri_ac_tips": "Comuníquese con nuestro equipo de atención al cliente de su región.\n\nSi se encuentra en los EE. UU., puede comunicarse con nuestro equipo de atención al cliente al 1-877-465-3566.\n\nPara otros países, verifique la información proporcionada en su manual de usuario del producto.",
     "ri_select_address": "Seleccione la dirección vinculada a este informe",
     "hob_alarm_duration_setting_content": "Establezca la duración del sonido de la alarma.",
-    "hob_auto_pot_detection_settings": "Detección automática de potenciómetro",
-    "hob_auto_pot_detection_settings_content": "Habilitar o deshabilitar la detección automática de potenciómetro.",
+    "hob_auto_pot_detection_settings": "Detección automática de vajilla",
+    "hob_auto_pot_detection_settings_content": "Habilitar o deshabilitar la detección automática de vajilla.",
     "hob_alarm_duration_settings": "Configuración de la duración de la alarma",
-    "hob_auto_pot_detection": "Detección automática de potenciómetro",
-    "hob_heater_level": "Nivel de calentador",
+    "hob_auto_pot_detection": "Detección automática de vajilla",
+    "hob_heater_level": "Nivel de Temperatura",
     "hob_universal_timer": "Temporizador universal",
     "hob_stopwatch": "Cronógrafo",
-    "hob_permanent_child_lock": "Bloqueo permanente para niños",
-    "hob_permanent_child_lock_content": "Habilitar o deshabilitar el bloqueo infantil permanente.",
-    "hob_permanent_child_lock_setting": "Bloqueo infantil permanente",
+    "hob_permanent_child_lock": "Bloqueo Infantil",
+    "hob_permanent_child_lock_content": "Habilitar o deshabilitar el bloqueo infantil.",
+    "hob_permanent_child_lock_setting": "Bloqueo infantil",
     "hob_volume_settings": "Ajustes de volumen",
     "hob_volume_settings_content": "Establecer el volumen de los sonidos del dispositivo.",
     "hob_brightness_settings": "Ajustes de brillo",
@@ -3964,7 +3964,7 @@
     "CL_DV_OV_g800_mode_steam": "Vapor",
     "CL_DV_OV_g800_mode_sabbath": "Sábado",
     "CL_DV_OV_g800_mode_pyrolysis": "Pirólisis",
-    "CL_DV_OV_g800_mode_air_fry": "Fritura con aire",
+    "CL_DV_OV_g800_mode_air_fry": "Freidora de aire",
     "CL_DV_OV_g800_mode_largegrill_bottom_heater": "Grill grande + calentador inferior",
     "CL_DV_OV_g800_mode_hotair_upperheater": "Aire caliente + calentador superior",
     "CL_DV_OV_g800_mode_hot_air_grill": "Aire caliente + grill",
@@ -4006,7 +4006,7 @@
     "CL_CF_CS_window_ac_step_2": "Mantenga presionado el botón “conectar” durante aproximadamente 6 segundos, o apunte el control remoto al receptor y presione el botón “oscilación” 6 veces, hasta que la pantalla muestre “77” o la luz WiFi comience a parpadear.",
     "CL_DV_OV_default_cooking_intensity": "INTENSIDAD DE COCCIÓN PREDETERMINADA",
     "CL_DV_HOB_residual_heat_title_pop": "Calor residual",
-    "CL_DV_HOB_residual_heat_content_pop": "La zona de cocción todavía está caliente. Tenga cuidado de no tocar la zona de cocción caliente ni colocar sobre ella elementos sensibles al calor.",
+    "CL_DV_HOB_residual_heat_content_pop": "La zona de cocción todavía está caliente. Tenga cuidado de no tocar la zona de cocción ni colocar sobre ella elementos sensibles al calor.",
     "CL_DV_HOB_hood_mode_setting": "Configuración del modo de capota",
     "CL_DV_HOB_refresh_mode_setting": "Configuración del modo de actualización",
     "CL_DV_HOB_grease_filter_profile": "Opciones de perfil de filtro de grasa",
@@ -4022,7 +4022,7 @@
     "CL_DV_HOB_clean_filter_content": "Reinicie el temporizador después de haber limpiado el filtro.",
     "CL_DV_HOB_more_update": "xx más actualizaciones",
     "CL_DV_TD_child_lock_tip": "El bloqueo para niños desactiva los botones del panel de control del aparato para evitar que los niños inicien o cambien un ciclo accidentalmente. ",
-    "API Testing": "Pruebas API",
+    "API Testing": "Testeo API",
     "CL_DV_DW_water_energy": "Agua y energía",
     "CL_DV_DW_light_display": "Iluminación y exhibición",
     "CL_DV_HOB_how_to_connect_accessories": "Cómo conectar accesorios",
@@ -4158,7 +4158,7 @@
     "CL_DV_WM_autodoes_tip": "Habilite esta función y su dispositivo dispensará de manera inteligente detergente y suavizante de telas mientras lava su ropa.",
     "CL_DV_WM_detergent_department_key": "COMPARTIMENTO DE DETERGENTE",
     "CL_DV_WM_Dosage_Amount_key": "Cantidad de dosis",
-    "CL_DV_WM_softener_department_key": "Comp. Suav.",
+    "CL_DV_WM_softener_department_key": "Comp. Suavizante",
     "CL_DV_WM_auto_does_with_detergent": "Autodosis con detergente",
     "CL_DV_WM_same_detergent": "El mismo detergente",
     "CL_DV_WM_normal_dosage_weight_tip": "Dosis normal: 4~5 kg de peso de ropa.",
@@ -4527,5 +4527,7 @@
     "CL_DV_WM_minimum_rpm": "RPM mínimas",
     "CL_DV_WM_medium_rpm": "RPM medias",
     "CL_DV_WM_maximum_rpm": "RPM máximas",
-    "CL_CF_CS_connect_to_wifi": "Siga estos pasos para conectar el dispositivo al Wi-Fi. Recomendamos deshabilitar los datos de red en su teléfono inteligente."
+    "CL_CF_CS_connect_to_wifi": "Siga estos pasos para conectar el dispositivo al Wi-Fi. Recomendamos deshabilitar los datos de red en su teléfono inteligente.",
+    "CL_DV_RF_family_care": "Cuidado familiar",
+    "CL_DV_RF_family_care_tips": "En los siguientes períodos, alguien puede estar activo frente al refrigerador."
 }
