--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -4527,5 +4527,7 @@
     "CL_DV_WM_minimum_rpm": "حداقل دور در دقیقه",
     "CL_DV_WM_medium_rpm": "دور متوسط",
     "CL_DV_WM_maximum_rpm": "حداکثر دور در دقیقه",
-    "CL_CF_CS_connect_to_wifi": "برای اتصال دستگاه به وای فای مراحل زیر را دنبال کنید. توصیه می کنیم داده های شبکه را در گوشی هوشمند خود غیرفعال کنید."
+    "CL_CF_CS_connect_to_wifi": "برای اتصال دستگاه به وای فای مراحل زیر را دنبال کنید. توصیه می کنیم داده های شبکه را در گوشی هوشمند خود غیرفعال کنید.",
+    "CL_DV_RF_family_care": "مراقبت از خانواده",
+    "CL_DV_RF_family_care_tips": "در دوره های بعدی ممکن است شخصی در جلوی یخچال فعال باشد."
 }
