--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -4527,5 +4527,7 @@
     "CL_DV_WM_minimum_rpm": "מינימום סל\"ד",
     "CL_DV_WM_medium_rpm": "סל\"ד בינוני",
     "CL_DV_WM_maximum_rpm": "סל\"ד מקסימלי",
-    "CL_CF_CS_connect_to_wifi": "בצע את השלבים הבאים כדי לחבר את המכשיר ל-Wi-Fi. אנו ממליצים להשבית את נתוני הרשת בסמארטפון שלך."
+    "CL_CF_CS_connect_to_wifi": "בצע את השלבים הבאים כדי לחבר את המכשיר ל-Wi-Fi. אנו ממליצים להשבית את נתוני הרשת בסמארטפון שלך.",
+    "CL_DV_RF_family_care": "טיפול משפחתי",
+    "CL_DV_RF_family_care_tips": "בתקופות הבאות, מישהו עשוי להיות פעיל מול המקרר."
 }
