--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -4527,5 +4527,7 @@
     "CL_DV_WM_minimum_rpm": "न्यूनतम आरपीएम",
     "CL_DV_WM_medium_rpm": "मध्यम आरपीएम",
     "CL_DV_WM_maximum_rpm": "अधिकतम आरपीएम",
-    "CL_CF_CS_connect_to_wifi": "डिवाइस को वाई-फाई से कनेक्ट करने के लिए इन चरणों का पालन करें। हम आपके स्मार्टफोन पर नेटवर्क डेटा को अक्षम करने की सलाह देते हैं।"
+    "CL_CF_CS_connect_to_wifi": "डिवाइस को वाई-फाई से कनेक्ट करने के लिए इन चरणों का पालन करें। हम आपके स्मार्टफोन पर नेटवर्क डेटा को अक्षम करने की सलाह देते हैं।",
+    "CL_DV_RF_family_care": "पारिवारिक देखभाल",
+    "CL_DV_RF_family_care_tips": "निम्नलिखित समय में, कोई व्यक्ति रेफ्रिजरेटर के सामने सक्रिय हो सकता है।"
 }
