--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -4527,5 +4527,7 @@
     "CL_DV_WM_minimum_rpm": "Минималды айналым/мин",
     "CL_DV_WM_medium_rpm": "Орташа айналым/мин",
     "CL_DV_WM_maximum_rpm": "Максималды айналым/мин",
-    "CL_CF_CS_connect_to_wifi": "Құрылғыны Wi-Fi желісіне қосу үшін мына қадамдарды орындаңыз. Смартфондағы желі деректерін өшіруді ұсынамыз."
+    "CL_CF_CS_connect_to_wifi": "Құрылғыны Wi-Fi желісіне қосу үшін мына қадамдарды орындаңыз. Смартфондағы желі деректерін өшіруді ұсынамыз.",
+    "CL_DV_RF_family_care": "Отбасылық қамқорлық",
+    "CL_DV_RF_family_care_tips": "Келесі кезеңдерде біреу тоңазытқыштың алдында белсенді болуы мүмкін."
 }
