--- a/language/i18n_mk.json
+++ b/language/i18n_mk.json
@@ -4527,5 +4527,7 @@
     "CL_DV_WM_minimum_rpm": "Минимални вртежи во минута",
     "CL_DV_WM_medium_rpm": "Средни вртежи во минута",
     "CL_DV_WM_maximum_rpm": "Максимални вртежи во минута",
-    "CL_CF_CS_connect_to_wifi": "Следете ги овие чекори за да го поврзете уредот со Wi-Fi. Препорачуваме да ги оневозможите мрежните податоци на вашиот паметен телефон."
+    "CL_CF_CS_connect_to_wifi": "Следете ги овие чекори за да го поврзете уредот со Wi-Fi. Препорачуваме да ги оневозможите мрежните податоци на вашиот паметен телефон.",
+    "CL_DV_RF_family_care": "Семејна грижа",
+    "CL_DV_RF_family_care_tips": "Во следните периоди, некој може да биде активен пред фрижидерот."
 }
