--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -4527,5 +4527,7 @@
     "CL_DV_WM_minimum_rpm": "Минимальные обороты",
     "CL_DV_WM_medium_rpm": "Средние обороты",
     "CL_DV_WM_maximum_rpm": "Максимальные обороты в минуту",
-    "CL_CF_CS_connect_to_wifi": "Следуйте инструкциям, чтобы подключить прибор к сети Wi-Fi. Рекомендуется отключить сетевые данные на смартфоне."
+    "CL_CF_CS_connect_to_wifi": "Следуйте инструкциям, чтобы подключить прибор к сети Wi-Fi. Рекомендуется отключить сетевые данные на смартфоне.",
+    "CL_DV_RF_family_care": "Уход за семьей",
+    "CL_DV_RF_family_care_tips": "В следующие периоды кто-то может проявлять активность перед холодильником."
 }
