--- a/language/i18n_sr-BA.json
+++ b/language/i18n_sr-BA.json
@@ -4527,5 +4527,7 @@
     "CL_DV_WM_minimum_rpm": "Минимални рпм",
     "CL_DV_WM_medium_rpm": "Средњи рпм",
     "CL_DV_WM_maximum_rpm": "Макимум рпм",
-    "CL_CF_CS_connect_to_wifi": "Пратите ове кораке да бисте повезали уређај на Wi-Fi. Препоручујемо вам да искључите мобилне податке на вашем паметном телефону."
+    "CL_CF_CS_connect_to_wifi": "Пратите ове кораке да бисте повезали уређај на Wi-Fi. Препоручујемо вам да искључите мобилне податке на вашем паметном телефону.",
+    "CL_DV_RF_family_care": "Фамили Царе",
+    "CL_DV_RF_family_care_tips": "У наредним периодима, неко може бити активан испред фрижидера."
 }
