--- a/language/i18n_th.json
+++ b/language/i18n_th.json
@@ -4527,5 +4527,7 @@
     "CL_DV_WM_minimum_rpm": "รอบต่อนาทีต่ำสุด",
     "CL_DV_WM_medium_rpm": "รอบปานกลาง",
     "CL_DV_WM_maximum_rpm": "รอบสูงสุด",
-    "CL_CF_CS_connect_to_wifi": "ทำตามขั้นตอนเหล่านี้เพื่อเชื่อมต่ออุปกรณ์กับ Wi-Fi เราขอแนะนำให้ปิดการใช้งานข้อมูลเครือข่ายบนสมาร์ทโฟนของคุณ"
+    "CL_CF_CS_connect_to_wifi": "ทำตามขั้นตอนเหล่านี้เพื่อเชื่อมต่ออุปกรณ์กับ Wi-Fi เราขอแนะนำให้ปิดการใช้งานข้อมูลเครือข่ายบนสมาร์ทโฟนของคุณ",
+    "CL_DV_RF_family_care": "การดูแลครอบครัว",
+    "CL_DV_RF_family_care_tips": "ในช่วงต่อไปนี้อาจจะมีใครทำกิจกรรมอยู่หน้าตู้เย็น"
 }
